update meta data

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl:
 # Site settings
 title: LaQueza Construction
 email: laquezaconstruction@gmail.com
-description: "LaQueza Construction. A proud tradition of services as General Contractor with 30 year of experience. LaQueza Construction base in Philippines compose of famiy members that has passion in building homes with highest quality."
+description: "LaQueza Construction. A proud tradition of services as General Contractor with more than 30 years of experience. LaQueza Construction base in Philippines compose of famiy members that has passion in building homes with highest quality."
 
 
 # Team names, titles and social links
